# modular_megafauna_model

./: .clang-format.license  .editorconfig  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  codemeta.json  codemeta.json.license  paper.bib  paper.md
.reuse/: dep5
data/ins/: herbiv_output.ins  herbiv_output.ins.orig  herbiv_testsim.ins  output.ins
doc/: herbiv_design.md  herbiv_model.md  herbiv_quickstart.md  herbiv_tests.md  model.md  objectorientation.md
docs/: CMakeLists.txt  bibliography.bib  conda_env.yml  demo_simulator.md  design.md  diagrams.iuml  group.h  mainpage.md  model.md  objectorientation.md  plantuml.jar.license  quickstart.md  recipes.md  separate_docs.h  tests.md  tutor.md
docs/images/: functional_response_types.svg.license  lgpl.svg.license  logistic_growth.svg.license  orcid.png.license  patchhabitat_foragereduction.fodg  patchhabitat_foragereduction.fodg.license  reproduction_illius2000resource.R  reuse-compliant.svg.license  scale_diglimit.R  starvation_body_condition_shift.R  starvation_illius2000resource.R  zenodo_doi.svg.license
docs/sphinx/: Makefile  conf.py
doxygen/: herbiv_design.md  herbiv_diagrams.iuml  herbiv_group.h  herbiv_model.md  herbiv_objectorientation.md  herbiv_overview_classes.dia  herbiv_parameters.dia  herbiv_tests.md  herbiv_tutor.h  herbiv_tutor.md
examples/: demo_simulation.toml  megafauna.toml  output.ins  testsim.ins
framework/: feed.cpp  feed.h  herbiv_feed.cpp  herbiv_feed.h  herbiv_framework.cpp  herbiv_framework.h  herbiv_parameters.cpp  herbiv_parameters.h  herbiv_paramreader.cpp  herbiv_paramreader.h  herbiv_simulate_day.cpp  herbiv_simulate_day.h  herbiv_testsimulation.cpp  herbiv_testsimulation.h  parameters.cpp  paramreader.cpp  paramreader.h  testsimulation.cpp
include/: megafauna.h
include/Fauna/: average.h  date.h  environment.h  forage_base.h  forage_types.h  forage_values.h  grass_forage.h  habitat.h  habitat_forage.h  parameters.h  read_insfile.h  utils.h  world.h
modules/: createherbivores.cpp  digestibility.h  forageclasses.cpp  forageenergy.cpp  forageenergy.h  foraging.h  habitat.cpp  habitat.h  herbiv_createherbivores.cpp  herbiv_createherbivores.h  herbiv_diet.cpp  herbiv_diet.h  herbiv_digestibility.cpp  herbiv_digestibility.h  herbiv_energetics.cpp  herbiv_energetics.h  herbiv_environment.h  herbiv_forageclasses.cpp  herbiv_forageclasses.h  herbiv_forageenergy.cpp  herbiv_forageenergy.h  herbiv_foraging.cpp  herbiv_foraging.h  herbiv_habitat.cpp  herbiv_habitat.h  herbiv_herbivore.cpp  herbiv_herbivore.h  herbiv_hft.cpp  herbiv_hft.h  herbiv_mortality.cpp  herbiv_mortality.h  herbiv_nitrogen.cpp  herbiv_nitrogen.h  herbiv_output.cpp  herbiv_output.h  herbiv_outputclasses.cpp  herbiv_outputclasses.h  herbiv_outputmodule.cpp  herbiv_outputmodule.h  herbiv_patchhabitat.cpp  (+23 more)
src/: createherbivores.cpp  createherbivores.h  digestibility.cpp  digestibility.h  energetics.cpp  energetics.h  environment.h  feed.cpp  feed.h  forageclasses.cpp  forageclasses.h  forageenergy.cpp  forageenergy.h  foraging.cpp  foraging.h  framework.cpp  framework.h  habitat.cpp  habitat.h  herbivore.cpp  herbivore.h  hft.cpp  hft.h  mortality.cpp  mortality.h  nitrogen.cpp  nitrogen.h  outputclasses.cpp  outputclasses.h  outputmodule.cpp  outputmodule.h  parameters.cpp  parameters.h  paramreader.cpp  paramreader.h  patchhabitat.cpp  patchhabitat.h  pftparameters.cpp  pftparameters.h  population.cpp  (+11 more)
src/Fauna/: average.cpp  average.test.cpp  breeding_season.cpp  breeding_season.h  breeding_season.test.cpp  cohort_population.cpp  cohort_population.h  cohort_population.test.cpp  create_herbivore_cohort.cpp  create_herbivore_cohort.h  create_herbivore_common.cpp  create_herbivore_common.h  create_herbivore_individual.cpp  create_herbivore_individual.h  create_herbivores.cpp  create_herbivores.h  createherbivores.cpp  createherbivores.h  date.cpp  date.test.cpp  date_interval.cpp  date_interval.h  date_interval.test.cpp  energetics.cpp  energetics.h  energetics.test.cpp  expenditure_components.cpp  expenditure_components.h  expenditure_components.test.cpp  fatmass_energy_budget.cpp  fatmass_energy_budget.h  fatmass_energy_budget.test.cpp  feed.cpp  feed.h  feed.test.cpp  feed_herbivores.cpp  feed_herbivores.h  feed_herbivores.test.cpp  fileystem.cpp  fileystem.h  (+103 more)
src/fauna/: createherbivores.cpp  createherbivores.h  digestibility.cpp  digestibility.h  energetics.cpp  energetics.h  environment.h  feed.cpp  feed.h  forageclasses.cpp  forageclasses.h  forageenergy.cpp  forageenergy.h  foraging.cpp  foraging.h  framework.cpp  framework.h  habitat.cpp  habitat.h  herbivore.cpp  herbivore.h  hft.cpp  hft.h  mortality.cpp  mortality.h  nitrogen.cpp  nitrogen.h  outputclasses.cpp  outputclasses.h  outputmodule.cpp  outputmodule.h  parameters.cpp  parameters.h  paramreader.cpp  paramreader.h  patchhabitat.cpp  patchhabitat.h  pftparameters.cpp  pftparameters.h  population.cpp  (+13 more)
tests/: CMakeLists.txt  catch.hpp.license  catch_main.cpp  dummy_habitat.h  dummy_herbivore.h  dummy_herbivore.test.cpp  dummy_herbivore_base.h  dummy_hft.h  dummy_population.h  dummy_population.test.cpp  herbiv_unittests.cpp  population_lists_match.h  unittests.cpp
tests/bad_demosim_insfiles/: habitats_not_multiple_of_hfts_01.toml  habitats_not_multiple_of_hfts_02.toml
tests/bad_insfiles/: breeding_start_ambiguous.toml  catabolism_gt_anabolism.toml  expenditure_exceeds_intake_01.toml  expenditure_exceeds_intake_02.toml  expenditure_exceeds_intake_03.toml  expenditure_exceeds_intake_04.toml  expenditure_exceeds_intake_05.toml  expenditure_exceeds_intake_06.toml  expenditure_exceeds_intake_07.toml  expenditure_exceeds_intake_08.toml  mortality_exceeds_reproduction_01.toml  mortality_exceeds_reproduction_02.toml  mortality_exceeds_reproduction_03.toml  two_groups_with_same_name.toml  wrong_type_01.toml  (+8 more)
tools/: cppclean.sh  run_valgrind_memcheck
tools/simulator/: CMakeLists.txt  testhabitat.cpp  testhabitat.h  testhabitat.test.cpp  testsimulation.cpp  testsimulation.h
(+50 files in other folders)
